manifests/applications/cilium/policies/host-fw-cp-allow-admins.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-cp-allow-admins
spec:
  description: allows jorijn to access the control plane and talos API
  nodeSelector:
    matchExpressions:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
  ingress:
    - fromCIDR:
        - 86.93.122.193/32 # jorijn's home ip
      toPorts:
        - ports:
            - port: "6443" # kubernetes API
              protocol: "TCP"
            - port: "50000" # talos API
              protocol: "TCP"
