manifests/applications/cilium/policies/host-fw-cp-allow-etcd-api.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-cp-allow-etcd-api
spec:
  description: etcd specific access rules for the control plane
  nodeSelector:
    matchExpressions:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
  ingress:
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: "2379"
        protocol: "TCP"
      - port: "2380"
        protocol: "TCP"
      - port: "51871"
        protocol: "UDP"
