manifests/applications/cilium/policies/host-fw-cp-allow-kubernetes-api.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-cp-allow-kubernetes-api
spec:
  description: kubernetes specific access rules for the control plane
  nodeSelector:
    matchExpressions:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
  ingress:
  - fromEntities:
    - cluster
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: "TCP"
