manifests/applications/cilium/policies/host-fw-cp-allow-talos-api.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-cp-allow-talos-api
spec:
  description: talos specific access rules for the control plane
  nodeSelector:
    matchExpressions:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
  # https://www.talos.dev/v1.6/learn-more/talos-network-connectivity/
  ingress:
  - fromEntities:
    - remote-node # only control-plane nodes
    toPorts:
    - ports:
      - port: "50000"
        protocol: "TCP"
  - fromEntities:
    - remote-node # only worker nodes
    toPorts:
    - ports:
      - port: "50001"
        protocol: "TCP"
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: talos-etcd-backup # from within the cluster
    toPorts:
    - ports:
      - port: "50000"
        protocol: "TCP"
