manifests/applications/cilium/policies/host-fw-generic-allow-cilium-traffic.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-cilium-traffic
spec:
  description: allows Cilium traffic from itself and other nodes
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: "8472" # cilium vxlan, not neccecary a health check, but required anyway
        protocol: "UDP"
      - port: "4240"
        protocol: "TCP"
