manifests/applications/cilium/policies/host-fw-generic-allow-hubble-relay-to-hubble-peer.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-hubble-relay-to-hubble-peer
spec:
  description: allows hubble-relay to hubble-peer traffic running on all nodes
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s-app: hubble-relay
    toPorts:
    - ports:
      - port: "4244"
        protocol: "TCP"
