manifests/applications/cilium/policies/host-fw-generic-allow-icmp-ping.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-icmp-ping
spec:
  description: allows ICMP ping from/to anywhere
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEntities:
    - cluster
    - remote-node
    icmps:
    - fields:
      - type: 8
        family: IPv4
      - type: 128
        family: IPv6
