manifests/applications/cilium/policies/host-fw-generic-allow-kube-apiserver.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-from-kube-apiserver-to-kubelet
spec:
  description: kube-apiserver specific access rules
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "10250"
        protocol: "TCP"
      - port: "4244" # hubble server API
        protocol: "TCP"
