manifests/applications/cilium/policies/host-fw-generic-allow-kubelet-scraping.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-kubelet-scraping
spec:
  description: allows scraping of the kubelet process
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: metrics-server
    # - matchLabels: # TODO: victoriametrics
        # io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
    toPorts:
    - ports:
      - port: "10250"
        protocol: "TCP"
