manifests/applications/cilium/policies/host-fw-generic-allow-talos-api.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-fw-generic-allow-talos-api
spec:
  description: talos specific access rules for the worker
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: "50000"
        protocol: "TCP"
